[tool.poetry]
name = "ai-cloud-compute"
version = "0.1.0"
description = ""
authors = ["Dennis Robertson <dennis.m.robertson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
